# docs/swagger.json
@@ -705,6 +705,10 @@
                     "type": "string",
                     "example": "안녕하세요"
                 },
+                "createdAt": {
+                    "type": "string",
+                    "example": "2024-03-23T12:00:00Z"
+                },
                 "senderId": {
                     "type": "integer",
                     "example": 1
@@ -712,10 +716,6 @@
                 "senderNickname": {
                     "type": "string",
                     "example": "홍길동"
-                },
-                "sentAt": {
-                    "type": "string",
-                    "example": "2024-03-23T12:00:00Z"
                 }
             }
         },
